jupyterlab_sql_editor/ipython_magic/trino/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> type
Rule 1     type -> ARRAY LPAREN type RPAREN
Rule 2     type -> MAP LPAREN type COMMA_SPACE type RPAREN
Rule 3     type -> ROW LPAREN row_field_list RPAREN
Rule 4     row_field_list -> row_field_list COMMA_SPACE row_field
Rule 5     row_field_list -> row_field
Rule 6     row_field -> row_field_parts
Rule 7     row_field_parts -> field_part row_field_parts
Rule 8     row_field_parts -> type
Rule 9     field_part -> NAME_PART
Rule 10    field_part -> SPACE
Rule 11    field_part -> WITH
Rule 12    field_part -> ZONE
Rule 13    field_part -> ROW
Rule 14    field_part -> MAP
Rule 15    field_part -> type
Rule 16    field_part -> type_name
Rule 17    type -> type_name
Rule 18    type_name -> BOOLEAN
Rule 19    type_name -> TINYINT
Rule 20    type_name -> SMALLINT
Rule 21    type_name -> INTEGER
Rule 22    type_name -> BIGINT
Rule 23    type_name -> REAL
Rule 24    type_name -> DOUBLE
Rule 25    type_name -> DECIMAL
Rule 26    type_name -> VARCHAR
Rule 27    type_name -> VARCHAR LPAREN NUMBER RPAREN
Rule 28    type_name -> CHAR
Rule 29    type_name -> VARBINARY
Rule 30    type_name -> JSON
Rule 31    type_name -> DATE
Rule 32    type_name -> TIME
Rule 33    type_name -> TIMESTAMP
Rule 34    type_name -> TIMESTAMP LPAREN NUMBER RPAREN SPACE WITH SPACE TIME SPACE ZONE

Terminals, with rules where they appear

ARRAY                : 1
BIGINT               : 22
BOOLEAN              : 18
CHAR                 : 28
COMMA_SPACE          : 2 4
DATE                 : 31
DECIMAL              : 25
DOUBLE               : 24
INTEGER              : 21
JSON                 : 30
LPAREN               : 1 2 3 27 34
MAP                  : 2 14
NAME_PART            : 9
NUMBER               : 27 34
REAL                 : 23
ROW                  : 3 13
RPAREN               : 1 2 3 27 34
SMALLINT             : 20
SPACE                : 10 34 34 34
TIME                 : 32 34
TIMESTAMP            : 33 34
TINYINT              : 19
VARBINARY            : 29
VARCHAR              : 26 27
WITH                 : 11 34
ZONE                 : 12 34
error                : 

Nonterminals, with rules where they appear

field_part           : 7
row_field            : 4 5
row_field_list       : 3 4
row_field_parts      : 6 7
type                 : 1 2 2 8 15 0
type_name            : 16 17

Parsing method: LALR

state 0

    (0) S' -> . type
    (1) type -> . ARRAY LPAREN type RPAREN
    (2) type -> . MAP LPAREN type COMMA_SPACE type RPAREN
    (3) type -> . ROW LPAREN row_field_list RPAREN
    (17) type -> . type_name
    (18) type_name -> . BOOLEAN
    (19) type_name -> . TINYINT
    (20) type_name -> . SMALLINT
    (21) type_name -> . INTEGER
    (22) type_name -> . BIGINT
    (23) type_name -> . REAL
    (24) type_name -> . DOUBLE
    (25) type_name -> . DECIMAL
    (26) type_name -> . VARCHAR
    (27) type_name -> . VARCHAR LPAREN NUMBER RPAREN
    (28) type_name -> . CHAR
    (29) type_name -> . VARBINARY
    (30) type_name -> . JSON
    (31) type_name -> . DATE
    (32) type_name -> . TIME
    (33) type_name -> . TIMESTAMP
    (34) type_name -> . TIMESTAMP LPAREN NUMBER RPAREN SPACE WITH SPACE TIME SPACE ZONE

    ARRAY           shift and go to state 2
    MAP             shift and go to state 3
    ROW             shift and go to state 4
    BOOLEAN         shift and go to state 6
    TINYINT         shift and go to state 7
    SMALLINT        shift and go to state 8
    INTEGER         shift and go to state 9
    BIGINT          shift and go to state 10
    REAL            shift and go to state 11
    DOUBLE          shift and go to state 12
    DECIMAL         shift and go to state 13
    VARCHAR         shift and go to state 14
    CHAR            shift and go to state 15
    VARBINARY       shift and go to state 16
    JSON            shift and go to state 17
    DATE            shift and go to state 18
    TIME            shift and go to state 19
    TIMESTAMP       shift and go to state 20

    type                           shift and go to state 1
    type_name                      shift and go to state 5

state 1

    (0) S' -> type .



state 2

    (1) type -> ARRAY . LPAREN type RPAREN

    LPAREN          shift and go to state 21


state 3

    (2) type -> MAP . LPAREN type COMMA_SPACE type RPAREN

    LPAREN          shift and go to state 22


state 4

    (3) type -> ROW . LPAREN row_field_list RPAREN

    LPAREN          shift and go to state 23


state 5

    (17) type -> type_name .

    $end            reduce using rule 17 (type -> type_name .)
    RPAREN          reduce using rule 17 (type -> type_name .)
    COMMA_SPACE     reduce using rule 17 (type -> type_name .)


state 6

    (18) type_name -> BOOLEAN .

    $end            reduce using rule 18 (type_name -> BOOLEAN .)
    RPAREN          reduce using rule 18 (type_name -> BOOLEAN .)
    COMMA_SPACE     reduce using rule 18 (type_name -> BOOLEAN .)
    NAME_PART       reduce using rule 18 (type_name -> BOOLEAN .)
    SPACE           reduce using rule 18 (type_name -> BOOLEAN .)
    WITH            reduce using rule 18 (type_name -> BOOLEAN .)
    ZONE            reduce using rule 18 (type_name -> BOOLEAN .)
    ROW             reduce using rule 18 (type_name -> BOOLEAN .)
    MAP             reduce using rule 18 (type_name -> BOOLEAN .)
    ARRAY           reduce using rule 18 (type_name -> BOOLEAN .)
    BOOLEAN         reduce using rule 18 (type_name -> BOOLEAN .)
    TINYINT         reduce using rule 18 (type_name -> BOOLEAN .)
    SMALLINT        reduce using rule 18 (type_name -> BOOLEAN .)
    INTEGER         reduce using rule 18 (type_name -> BOOLEAN .)
    BIGINT          reduce using rule 18 (type_name -> BOOLEAN .)
    REAL            reduce using rule 18 (type_name -> BOOLEAN .)
    DOUBLE          reduce using rule 18 (type_name -> BOOLEAN .)
    DECIMAL         reduce using rule 18 (type_name -> BOOLEAN .)
    VARCHAR         reduce using rule 18 (type_name -> BOOLEAN .)
    CHAR            reduce using rule 18 (type_name -> BOOLEAN .)
    VARBINARY       reduce using rule 18 (type_name -> BOOLEAN .)
    JSON            reduce using rule 18 (type_name -> BOOLEAN .)
    DATE            reduce using rule 18 (type_name -> BOOLEAN .)
    TIME            reduce using rule 18 (type_name -> BOOLEAN .)
    TIMESTAMP       reduce using rule 18 (type_name -> BOOLEAN .)


state 7

    (19) type_name -> TINYINT .

    $end            reduce using rule 19 (type_name -> TINYINT .)
    RPAREN          reduce using rule 19 (type_name -> TINYINT .)
    COMMA_SPACE     reduce using rule 19 (type_name -> TINYINT .)
    NAME_PART       reduce using rule 19 (type_name -> TINYINT .)
    SPACE           reduce using rule 19 (type_name -> TINYINT .)
    WITH            reduce using rule 19 (type_name -> TINYINT .)
    ZONE            reduce using rule 19 (type_name -> TINYINT .)
    ROW             reduce using rule 19 (type_name -> TINYINT .)
    MAP             reduce using rule 19 (type_name -> TINYINT .)
    ARRAY           reduce using rule 19 (type_name -> TINYINT .)
    BOOLEAN         reduce using rule 19 (type_name -> TINYINT .)
    TINYINT         reduce using rule 19 (type_name -> TINYINT .)
    SMALLINT        reduce using rule 19 (type_name -> TINYINT .)
    INTEGER         reduce using rule 19 (type_name -> TINYINT .)
    BIGINT          reduce using rule 19 (type_name -> TINYINT .)
    REAL            reduce using rule 19 (type_name -> TINYINT .)
    DOUBLE          reduce using rule 19 (type_name -> TINYINT .)
    DECIMAL         reduce using rule 19 (type_name -> TINYINT .)
    VARCHAR         reduce using rule 19 (type_name -> TINYINT .)
    CHAR            reduce using rule 19 (type_name -> TINYINT .)
    VARBINARY       reduce using rule 19 (type_name -> TINYINT .)
    JSON            reduce using rule 19 (type_name -> TINYINT .)
    DATE            reduce using rule 19 (type_name -> TINYINT .)
    TIME            reduce using rule 19 (type_name -> TINYINT .)
    TIMESTAMP       reduce using rule 19 (type_name -> TINYINT .)


state 8

    (20) type_name -> SMALLINT .

    $end            reduce using rule 20 (type_name -> SMALLINT .)
    RPAREN          reduce using rule 20 (type_name -> SMALLINT .)
    COMMA_SPACE     reduce using rule 20 (type_name -> SMALLINT .)
    NAME_PART       reduce using rule 20 (type_name -> SMALLINT .)
    SPACE           reduce using rule 20 (type_name -> SMALLINT .)
    WITH            reduce using rule 20 (type_name -> SMALLINT .)
    ZONE            reduce using rule 20 (type_name -> SMALLINT .)
    ROW             reduce using rule 20 (type_name -> SMALLINT .)
    MAP             reduce using rule 20 (type_name -> SMALLINT .)
    ARRAY           reduce using rule 20 (type_name -> SMALLINT .)
    BOOLEAN         reduce using rule 20 (type_name -> SMALLINT .)
    TINYINT         reduce using rule 20 (type_name -> SMALLINT .)
    SMALLINT        reduce using rule 20 (type_name -> SMALLINT .)
    INTEGER         reduce using rule 20 (type_name -> SMALLINT .)
    BIGINT          reduce using rule 20 (type_name -> SMALLINT .)
    REAL            reduce using rule 20 (type_name -> SMALLINT .)
    DOUBLE          reduce using rule 20 (type_name -> SMALLINT .)
    DECIMAL         reduce using rule 20 (type_name -> SMALLINT .)
    VARCHAR         reduce using rule 20 (type_name -> SMALLINT .)
    CHAR            reduce using rule 20 (type_name -> SMALLINT .)
    VARBINARY       reduce using rule 20 (type_name -> SMALLINT .)
    JSON            reduce using rule 20 (type_name -> SMALLINT .)
    DATE            reduce using rule 20 (type_name -> SMALLINT .)
    TIME            reduce using rule 20 (type_name -> SMALLINT .)
    TIMESTAMP       reduce using rule 20 (type_name -> SMALLINT .)


state 9

    (21) type_name -> INTEGER .

    $end            reduce using rule 21 (type_name -> INTEGER .)
    RPAREN          reduce using rule 21 (type_name -> INTEGER .)
    COMMA_SPACE     reduce using rule 21 (type_name -> INTEGER .)
    NAME_PART       reduce using rule 21 (type_name -> INTEGER .)
    SPACE           reduce using rule 21 (type_name -> INTEGER .)
    WITH            reduce using rule 21 (type_name -> INTEGER .)
    ZONE            reduce using rule 21 (type_name -> INTEGER .)
    ROW             reduce using rule 21 (type_name -> INTEGER .)
    MAP             reduce using rule 21 (type_name -> INTEGER .)
    ARRAY           reduce using rule 21 (type_name -> INTEGER .)
    BOOLEAN         reduce using rule 21 (type_name -> INTEGER .)
    TINYINT         reduce using rule 21 (type_name -> INTEGER .)
    SMALLINT        reduce using rule 21 (type_name -> INTEGER .)
    INTEGER         reduce using rule 21 (type_name -> INTEGER .)
    BIGINT          reduce using rule 21 (type_name -> INTEGER .)
    REAL            reduce using rule 21 (type_name -> INTEGER .)
    DOUBLE          reduce using rule 21 (type_name -> INTEGER .)
    DECIMAL         reduce using rule 21 (type_name -> INTEGER .)
    VARCHAR         reduce using rule 21 (type_name -> INTEGER .)
    CHAR            reduce using rule 21 (type_name -> INTEGER .)
    VARBINARY       reduce using rule 21 (type_name -> INTEGER .)
    JSON            reduce using rule 21 (type_name -> INTEGER .)
    DATE            reduce using rule 21 (type_name -> INTEGER .)
    TIME            reduce using rule 21 (type_name -> INTEGER .)
    TIMESTAMP       reduce using rule 21 (type_name -> INTEGER .)


state 10

    (22) type_name -> BIGINT .

    $end            reduce using rule 22 (type_name -> BIGINT .)
    RPAREN          reduce using rule 22 (type_name -> BIGINT .)
    COMMA_SPACE     reduce using rule 22 (type_name -> BIGINT .)
    NAME_PART       reduce using rule 22 (type_name -> BIGINT .)
    SPACE           reduce using rule 22 (type_name -> BIGINT .)
    WITH            reduce using rule 22 (type_name -> BIGINT .)
    ZONE            reduce using rule 22 (type_name -> BIGINT .)
    ROW             reduce using rule 22 (type_name -> BIGINT .)
    MAP             reduce using rule 22 (type_name -> BIGINT .)
    ARRAY           reduce using rule 22 (type_name -> BIGINT .)
    BOOLEAN         reduce using rule 22 (type_name -> BIGINT .)
    TINYINT         reduce using rule 22 (type_name -> BIGINT .)
    SMALLINT        reduce using rule 22 (type_name -> BIGINT .)
    INTEGER         reduce using rule 22 (type_name -> BIGINT .)
    BIGINT          reduce using rule 22 (type_name -> BIGINT .)
    REAL            reduce using rule 22 (type_name -> BIGINT .)
    DOUBLE          reduce using rule 22 (type_name -> BIGINT .)
    DECIMAL         reduce using rule 22 (type_name -> BIGINT .)
    VARCHAR         reduce using rule 22 (type_name -> BIGINT .)
    CHAR            reduce using rule 22 (type_name -> BIGINT .)
    VARBINARY       reduce using rule 22 (type_name -> BIGINT .)
    JSON            reduce using rule 22 (type_name -> BIGINT .)
    DATE            reduce using rule 22 (type_name -> BIGINT .)
    TIME            reduce using rule 22 (type_name -> BIGINT .)
    TIMESTAMP       reduce using rule 22 (type_name -> BIGINT .)


state 11

    (23) type_name -> REAL .

    $end            reduce using rule 23 (type_name -> REAL .)
    RPAREN          reduce using rule 23 (type_name -> REAL .)
    COMMA_SPACE     reduce using rule 23 (type_name -> REAL .)
    NAME_PART       reduce using rule 23 (type_name -> REAL .)
    SPACE           reduce using rule 23 (type_name -> REAL .)
    WITH            reduce using rule 23 (type_name -> REAL .)
    ZONE            reduce using rule 23 (type_name -> REAL .)
    ROW             reduce using rule 23 (type_name -> REAL .)
    MAP             reduce using rule 23 (type_name -> REAL .)
    ARRAY           reduce using rule 23 (type_name -> REAL .)
    BOOLEAN         reduce using rule 23 (type_name -> REAL .)
    TINYINT         reduce using rule 23 (type_name -> REAL .)
    SMALLINT        reduce using rule 23 (type_name -> REAL .)
    INTEGER         reduce using rule 23 (type_name -> REAL .)
    BIGINT          reduce using rule 23 (type_name -> REAL .)
    REAL            reduce using rule 23 (type_name -> REAL .)
    DOUBLE          reduce using rule 23 (type_name -> REAL .)
    DECIMAL         reduce using rule 23 (type_name -> REAL .)
    VARCHAR         reduce using rule 23 (type_name -> REAL .)
    CHAR            reduce using rule 23 (type_name -> REAL .)
    VARBINARY       reduce using rule 23 (type_name -> REAL .)
    JSON            reduce using rule 23 (type_name -> REAL .)
    DATE            reduce using rule 23 (type_name -> REAL .)
    TIME            reduce using rule 23 (type_name -> REAL .)
    TIMESTAMP       reduce using rule 23 (type_name -> REAL .)


state 12

    (24) type_name -> DOUBLE .

    $end            reduce using rule 24 (type_name -> DOUBLE .)
    RPAREN          reduce using rule 24 (type_name -> DOUBLE .)
    COMMA_SPACE     reduce using rule 24 (type_name -> DOUBLE .)
    NAME_PART       reduce using rule 24 (type_name -> DOUBLE .)
    SPACE           reduce using rule 24 (type_name -> DOUBLE .)
    WITH            reduce using rule 24 (type_name -> DOUBLE .)
    ZONE            reduce using rule 24 (type_name -> DOUBLE .)
    ROW             reduce using rule 24 (type_name -> DOUBLE .)
    MAP             reduce using rule 24 (type_name -> DOUBLE .)
    ARRAY           reduce using rule 24 (type_name -> DOUBLE .)
    BOOLEAN         reduce using rule 24 (type_name -> DOUBLE .)
    TINYINT         reduce using rule 24 (type_name -> DOUBLE .)
    SMALLINT        reduce using rule 24 (type_name -> DOUBLE .)
    INTEGER         reduce using rule 24 (type_name -> DOUBLE .)
    BIGINT          reduce using rule 24 (type_name -> DOUBLE .)
    REAL            reduce using rule 24 (type_name -> DOUBLE .)
    DOUBLE          reduce using rule 24 (type_name -> DOUBLE .)
    DECIMAL         reduce using rule 24 (type_name -> DOUBLE .)
    VARCHAR         reduce using rule 24 (type_name -> DOUBLE .)
    CHAR            reduce using rule 24 (type_name -> DOUBLE .)
    VARBINARY       reduce using rule 24 (type_name -> DOUBLE .)
    JSON            reduce using rule 24 (type_name -> DOUBLE .)
    DATE            reduce using rule 24 (type_name -> DOUBLE .)
    TIME            reduce using rule 24 (type_name -> DOUBLE .)
    TIMESTAMP       reduce using rule 24 (type_name -> DOUBLE .)


state 13

    (25) type_name -> DECIMAL .

    $end            reduce using rule 25 (type_name -> DECIMAL .)
    RPAREN          reduce using rule 25 (type_name -> DECIMAL .)
    COMMA_SPACE     reduce using rule 25 (type_name -> DECIMAL .)
    NAME_PART       reduce using rule 25 (type_name -> DECIMAL .)
    SPACE           reduce using rule 25 (type_name -> DECIMAL .)
    WITH            reduce using rule 25 (type_name -> DECIMAL .)
    ZONE            reduce using rule 25 (type_name -> DECIMAL .)
    ROW             reduce using rule 25 (type_name -> DECIMAL .)
    MAP             reduce using rule 25 (type_name -> DECIMAL .)
    ARRAY           reduce using rule 25 (type_name -> DECIMAL .)
    BOOLEAN         reduce using rule 25 (type_name -> DECIMAL .)
    TINYINT         reduce using rule 25 (type_name -> DECIMAL .)
    SMALLINT        reduce using rule 25 (type_name -> DECIMAL .)
    INTEGER         reduce using rule 25 (type_name -> DECIMAL .)
    BIGINT          reduce using rule 25 (type_name -> DECIMAL .)
    REAL            reduce using rule 25 (type_name -> DECIMAL .)
    DOUBLE          reduce using rule 25 (type_name -> DECIMAL .)
    DECIMAL         reduce using rule 25 (type_name -> DECIMAL .)
    VARCHAR         reduce using rule 25 (type_name -> DECIMAL .)
    CHAR            reduce using rule 25 (type_name -> DECIMAL .)
    VARBINARY       reduce using rule 25 (type_name -> DECIMAL .)
    JSON            reduce using rule 25 (type_name -> DECIMAL .)
    DATE            reduce using rule 25 (type_name -> DECIMAL .)
    TIME            reduce using rule 25 (type_name -> DECIMAL .)
    TIMESTAMP       reduce using rule 25 (type_name -> DECIMAL .)


state 14

    (26) type_name -> VARCHAR .
    (27) type_name -> VARCHAR . LPAREN NUMBER RPAREN

    $end            reduce using rule 26 (type_name -> VARCHAR .)
    RPAREN          reduce using rule 26 (type_name -> VARCHAR .)
    COMMA_SPACE     reduce using rule 26 (type_name -> VARCHAR .)
    NAME_PART       reduce using rule 26 (type_name -> VARCHAR .)
    SPACE           reduce using rule 26 (type_name -> VARCHAR .)
    WITH            reduce using rule 26 (type_name -> VARCHAR .)
    ZONE            reduce using rule 26 (type_name -> VARCHAR .)
    ROW             reduce using rule 26 (type_name -> VARCHAR .)
    MAP             reduce using rule 26 (type_name -> VARCHAR .)
    ARRAY           reduce using rule 26 (type_name -> VARCHAR .)
    BOOLEAN         reduce using rule 26 (type_name -> VARCHAR .)
    TINYINT         reduce using rule 26 (type_name -> VARCHAR .)
    SMALLINT        reduce using rule 26 (type_name -> VARCHAR .)
    INTEGER         reduce using rule 26 (type_name -> VARCHAR .)
    BIGINT          reduce using rule 26 (type_name -> VARCHAR .)
    REAL            reduce using rule 26 (type_name -> VARCHAR .)
    DOUBLE          reduce using rule 26 (type_name -> VARCHAR .)
    DECIMAL         reduce using rule 26 (type_name -> VARCHAR .)
    VARCHAR         reduce using rule 26 (type_name -> VARCHAR .)
    CHAR            reduce using rule 26 (type_name -> VARCHAR .)
    VARBINARY       reduce using rule 26 (type_name -> VARCHAR .)
    JSON            reduce using rule 26 (type_name -> VARCHAR .)
    DATE            reduce using rule 26 (type_name -> VARCHAR .)
    TIME            reduce using rule 26 (type_name -> VARCHAR .)
    TIMESTAMP       reduce using rule 26 (type_name -> VARCHAR .)
    LPAREN          shift and go to state 24


state 15

    (28) type_name -> CHAR .

    $end            reduce using rule 28 (type_name -> CHAR .)
    RPAREN          reduce using rule 28 (type_name -> CHAR .)
    COMMA_SPACE     reduce using rule 28 (type_name -> CHAR .)
    NAME_PART       reduce using rule 28 (type_name -> CHAR .)
    SPACE           reduce using rule 28 (type_name -> CHAR .)
    WITH            reduce using rule 28 (type_name -> CHAR .)
    ZONE            reduce using rule 28 (type_name -> CHAR .)
    ROW             reduce using rule 28 (type_name -> CHAR .)
    MAP             reduce using rule 28 (type_name -> CHAR .)
    ARRAY           reduce using rule 28 (type_name -> CHAR .)
    BOOLEAN         reduce using rule 28 (type_name -> CHAR .)
    TINYINT         reduce using rule 28 (type_name -> CHAR .)
    SMALLINT        reduce using rule 28 (type_name -> CHAR .)
    INTEGER         reduce using rule 28 (type_name -> CHAR .)
    BIGINT          reduce using rule 28 (type_name -> CHAR .)
    REAL            reduce using rule 28 (type_name -> CHAR .)
    DOUBLE          reduce using rule 28 (type_name -> CHAR .)
    DECIMAL         reduce using rule 28 (type_name -> CHAR .)
    VARCHAR         reduce using rule 28 (type_name -> CHAR .)
    CHAR            reduce using rule 28 (type_name -> CHAR .)
    VARBINARY       reduce using rule 28 (type_name -> CHAR .)
    JSON            reduce using rule 28 (type_name -> CHAR .)
    DATE            reduce using rule 28 (type_name -> CHAR .)
    TIME            reduce using rule 28 (type_name -> CHAR .)
    TIMESTAMP       reduce using rule 28 (type_name -> CHAR .)


state 16

    (29) type_name -> VARBINARY .

    $end            reduce using rule 29 (type_name -> VARBINARY .)
    RPAREN          reduce using rule 29 (type_name -> VARBINARY .)
    COMMA_SPACE     reduce using rule 29 (type_name -> VARBINARY .)
    NAME_PART       reduce using rule 29 (type_name -> VARBINARY .)
    SPACE           reduce using rule 29 (type_name -> VARBINARY .)
    WITH            reduce using rule 29 (type_name -> VARBINARY .)
    ZONE            reduce using rule 29 (type_name -> VARBINARY .)
    ROW             reduce using rule 29 (type_name -> VARBINARY .)
    MAP             reduce using rule 29 (type_name -> VARBINARY .)
    ARRAY           reduce using rule 29 (type_name -> VARBINARY .)
    BOOLEAN         reduce using rule 29 (type_name -> VARBINARY .)
    TINYINT         reduce using rule 29 (type_name -> VARBINARY .)
    SMALLINT        reduce using rule 29 (type_name -> VARBINARY .)
    INTEGER         reduce using rule 29 (type_name -> VARBINARY .)
    BIGINT          reduce using rule 29 (type_name -> VARBINARY .)
    REAL            reduce using rule 29 (type_name -> VARBINARY .)
    DOUBLE          reduce using rule 29 (type_name -> VARBINARY .)
    DECIMAL         reduce using rule 29 (type_name -> VARBINARY .)
    VARCHAR         reduce using rule 29 (type_name -> VARBINARY .)
    CHAR            reduce using rule 29 (type_name -> VARBINARY .)
    VARBINARY       reduce using rule 29 (type_name -> VARBINARY .)
    JSON            reduce using rule 29 (type_name -> VARBINARY .)
    DATE            reduce using rule 29 (type_name -> VARBINARY .)
    TIME            reduce using rule 29 (type_name -> VARBINARY .)
    TIMESTAMP       reduce using rule 29 (type_name -> VARBINARY .)


state 17

    (30) type_name -> JSON .

    $end            reduce using rule 30 (type_name -> JSON .)
    RPAREN          reduce using rule 30 (type_name -> JSON .)
    COMMA_SPACE     reduce using rule 30 (type_name -> JSON .)
    NAME_PART       reduce using rule 30 (type_name -> JSON .)
    SPACE           reduce using rule 30 (type_name -> JSON .)
    WITH            reduce using rule 30 (type_name -> JSON .)
    ZONE            reduce using rule 30 (type_name -> JSON .)
    ROW             reduce using rule 30 (type_name -> JSON .)
    MAP             reduce using rule 30 (type_name -> JSON .)
    ARRAY           reduce using rule 30 (type_name -> JSON .)
    BOOLEAN         reduce using rule 30 (type_name -> JSON .)
    TINYINT         reduce using rule 30 (type_name -> JSON .)
    SMALLINT        reduce using rule 30 (type_name -> JSON .)
    INTEGER         reduce using rule 30 (type_name -> JSON .)
    BIGINT          reduce using rule 30 (type_name -> JSON .)
    REAL            reduce using rule 30 (type_name -> JSON .)
    DOUBLE          reduce using rule 30 (type_name -> JSON .)
    DECIMAL         reduce using rule 30 (type_name -> JSON .)
    VARCHAR         reduce using rule 30 (type_name -> JSON .)
    CHAR            reduce using rule 30 (type_name -> JSON .)
    VARBINARY       reduce using rule 30 (type_name -> JSON .)
    JSON            reduce using rule 30 (type_name -> JSON .)
    DATE            reduce using rule 30 (type_name -> JSON .)
    TIME            reduce using rule 30 (type_name -> JSON .)
    TIMESTAMP       reduce using rule 30 (type_name -> JSON .)


state 18

    (31) type_name -> DATE .

    $end            reduce using rule 31 (type_name -> DATE .)
    RPAREN          reduce using rule 31 (type_name -> DATE .)
    COMMA_SPACE     reduce using rule 31 (type_name -> DATE .)
    NAME_PART       reduce using rule 31 (type_name -> DATE .)
    SPACE           reduce using rule 31 (type_name -> DATE .)
    WITH            reduce using rule 31 (type_name -> DATE .)
    ZONE            reduce using rule 31 (type_name -> DATE .)
    ROW             reduce using rule 31 (type_name -> DATE .)
    MAP             reduce using rule 31 (type_name -> DATE .)
    ARRAY           reduce using rule 31 (type_name -> DATE .)
    BOOLEAN         reduce using rule 31 (type_name -> DATE .)
    TINYINT         reduce using rule 31 (type_name -> DATE .)
    SMALLINT        reduce using rule 31 (type_name -> DATE .)
    INTEGER         reduce using rule 31 (type_name -> DATE .)
    BIGINT          reduce using rule 31 (type_name -> DATE .)
    REAL            reduce using rule 31 (type_name -> DATE .)
    DOUBLE          reduce using rule 31 (type_name -> DATE .)
    DECIMAL         reduce using rule 31 (type_name -> DATE .)
    VARCHAR         reduce using rule 31 (type_name -> DATE .)
    CHAR            reduce using rule 31 (type_name -> DATE .)
    VARBINARY       reduce using rule 31 (type_name -> DATE .)
    JSON            reduce using rule 31 (type_name -> DATE .)
    DATE            reduce using rule 31 (type_name -> DATE .)
    TIME            reduce using rule 31 (type_name -> DATE .)
    TIMESTAMP       reduce using rule 31 (type_name -> DATE .)


state 19

    (32) type_name -> TIME .
